--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Pyrous.github.io</title>
     </head>
     <body>
-
+        <div class="logo">
+            <h1>Pyrous</h1>
+        </div>
     </body>
 </html>
