--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="logo">
-            <h1>Welcome to the<h1><a href="https://pyrouscodes.github.io/Pyrous.github.io/">Pyrouscodes website</a></h1>!</h1>
+            <h1>Welcome to the<h1><a href="https://pyrouscodes.github.io/Pyrous.github.io/">Pyrouscodes website!</a></h1></h1>
         </div>
     </body>
 </html>
