--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+        <link rel="stylesheet" href="styles.css" />
         <title>Pyrous.github.io</title>
     </head>
     <body>
         <div class="logo">
-            <h1>Welcome to the <a href="https://pyrouscodes.github.io/Pyrous.github.io/">Pyrouscodes website</a>!</h1>
+            <h1>Welcome to the Pyrouscodes website!</h1>
         </div>
     </body>
 </html>
